# SSCFLSO

./: .gitignore  README.md  createTopLevelCMake.py
results/: output0.txt
src/: CMakeLists.txt  common.h  constants.h  headers.h  libraries.h  main.cpp  typedefinitions.h
src/SSCFLSO/: SSCFLSO.h  SSCFLSO_generator.cpp  SSCFLSO_generator.h  SSCFLSO_unit_test.cpp  SSCFLSO_unit_test.h  SSCFLSO_validator.cpp  SSCFLSO_validator.h  unit_test.cpp  unit_test.h  unit_test0.plc
src/SSCFLSO_model/: CMakeLists.txt  SSCFLSO_generator.cpp  SSCFLSO_generator.h  SSCFLSO_validator.cpp  SSCFLSO_validator.h
src/UI/: CMakeLists.txt  UI.cpp  UI.h  helpMessage.h  invalidCommandMessage.h  showAlgos.h  showFormat.h
src/algorithms/: CMakeLists.txt  SSCFLSO_gurobi.cpp  SSCFLSO_gurobi.h  algorithm.cpp  algorithm.h  algorithmClass.cpp  algorithmClass.h  algorithm_unit_test.cpp  algorithm_unit_test.h  preprocess.cpp  preprocess.h  unit_test.cpp  unit_test.h  unit_test0.plc  unit_test_utility.cpp  unit_test_utility.h
src/algorithms/Composite/: CMakeLists.txt  composite.cpp  composite.h  composite_unit_test.h  unit_test.h
src/algorithms/DoNothing/: DoNothing.cpp  DoNothing.h
src/algorithms/Preprocess/: CMakeLists.txt  preprocess.cpp  preprocess.h  preprocessInfo.h  preprocess_unit_test.cpp  preprocess_unit_test.h  unit_test.cpp  unit_test.h
src/algorithms/composite/: CMakeLists.txt  composite.cpp  composite_unit_test.cpp  composite_unit_test.h
src/algorithms/eager_search/: CMakeLists.txt  eager_search.cpp  eager_search.h
src/algorithms/grasp/: CMakeLists.txt  grasp.cpp  grasp.h  grasp_unit_test.cpp  grasp_unit_test.h  unit_test.h
src/algorithms/greedy/: CMakeLists.txt  greedy.cpp  greedy.h  greedy.txt  greedyInfo.h  greedy_unit_test.cpp  greedy_unit_test.h  unit_test.cpp  unit_test.h
src/algorithms/greedy_pop/: greedy_pop.cpp  greedy_pop.h  greedy_pop.txt  greedy_pop_info.h  unit_test.cpp
src/algorithms/gurobi/: CMakeLists.txt  gurobi.cpp  gurobi.h  gurobi_unit_test.cpp  gurobi_unit_test.h
src/algorithms/lagrangian_relaxation/: CMakeLists.txt  LR_unit_test.cpp  LR_unit_test.h  lagrangian_relaxation.cpp  lagrangian_relaxation.h  semi_lagrangian_relaxation.cpp  semi_lagrangian_relaxation.h  unit_test.h
src/algorithms/local_search/: CMakeLists.txt  local_search.cpp  local_search.h  local_search.txt  local_search_info.h  local_search_unit_test.cpp  local_search_unit_test.h  unit_test.cpp  unit_test.h  unit_test_stingy0.plc
src/algorithms/local_search_first/: local_search_first.cpp  local_search_first.h
src/algorithms/preprocess/: CMakeLists.txt  preprocess.cpp  preprocess.h  preprocess_unit_test.h
src/benchmarking/: CMakeLists.txt  benchmark.cpp  benchmark.h
src/helpers/: CMakeLists.txt  benchmark.cpp  benchmark.h  data_helper.cpp  data_helper.h  data_helper_impl.h  preprocess.cpp  preprocess.h  random.cpp  random.h  report_result.cpp  report_result.h  run_all_unit_tests.cpp  run_all_unit_tests.h  timer.cpp  timer.h  unit_test.cpp  unit_test.h  unit_test1.plc  unit_test2.plc  utility.cpp  utility.h  utility_impl.h
src/tracking/: CMakeLists.txt  report_result.cpp  report_result.h
src/unit testing framework/: unit_test.cpp  unit_test.h
src/unit_testing_framework/: CMakeLists.txt  unit_test.cpp  unit_test.h
(+959 files in other folders)
