# CMake created by Python script. Please, only adjust if you know what to do
cmake_minimum_required(VERSION 3.22.1)
project(SSCFLSO_project)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(SSCFLSO)
add_subdirectory(algorithms)
add_subdirectory(benchmarking)
add_subdirectory(helpers)
add_subdirectory(SSCFLSO_model)
add_subdirectory(tracking)
add_subdirectory(UI)
add_subdirectory(unit_testing_framework)
set(GUROBI_INC /home/glai/Documents/gurobi1103/linux64/include)
set(GUROBI_LIB /home/glai/Documents/gurobi1103/linux64/lib)
target_include_directories(SSCFLSO PRIVATE ${GUROBI_INC})  
add_library(grblib SHARED IMPORTED GLOBAL)
set_target_properties(grblib PROPERTIES IMPORTED_LOCATION ${GUROBI_LIB}/libgurobi110_light.so)
target_link_libraries(SSCFLSO ${GUROBI_LIB}/libgurobi_c++.a grblib)
target_sources(SSCFLSO PUBLIC main.cpp)